--- a/MailClientServer/src/main/resources/com/progiii/mailclientserver/client/ClientView.fxml
+++ b/MailClientServer/src/main/resources/com/progiii/mailclientserver/client/ClientView.fxml
@@ -47,6 +47,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
+<!--suppress ALL -->
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
